Added method for API update
SVN-Revision: 4792